feat(order-item): add endpoint to list order items
- Add service method to retrieve all items for an order
- Expose GET /orders/{orderId}/items endpoint
- Map order items to response DTOs
- Return 404 when the order does not exist
- Add unit tests for OrderItemService listing behavior
- Add controller tests for successful and not-found scenarios
- Improve response assertions and simplify test setup